k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dragon-scale-studio-dev
  namespace: dragon-scale-studio-dev
  labels:
    app.kubernetes.io/name: dragon-scale-studio-dev
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: dragon-scale-studio-dev
