k8s/dev/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dragon-scale-studio-dev
  namespace: dragon-scale-studio-dev
  labels:
    app.kubernetes.io/name: dragon-scale-studio-dev
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`dss.sandbox.nurds.com`)
    kind: Rule
    services:
    - name: dragon-scale-studio-dev
      port: 80
